fix task store docs API and add docs for delete API
