# db/schema.rb
@@ -16,8 +16,8 @@ ActiveRecord::Schema.define(version: 2019_04_26_065538) do
   enable_extension "plpgsql"
 
   create_table "tasks", force: :cascade do |t|
-    t.string "name"
-    t.text "descrription"
+    t.string "task_name"
+    t.text "description"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
   end
